Closed Bug 100834 Opened 24 years ago Closed 24 years ago

Enumerate searchplugins on startup

Categories

(SeaMonkey :: Search, defect, P3)

x86
Windows 2000
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.5

People

(Reporter: dp, Assigned: dp)

References

Details

(Keywords: perf)

Attachments

(1 file)

on startup we enumerate searchplugins to get a list of them.
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla0.9.5
Robert review ?
Keywords: perf
Blocks: 29063
Sadly, you can't defer everything regarding to search plugins. Here's why: imagine that you have a plugin for Google installed. In the browser, if you go to http://www.google.com/ and do a search for something, you'd want the set of search results returned to be aggregated into the sidebar's search panel. Without already "discovering" the set of available search engines, that wouldn't be possible.
Well, I guess I take back my previous comment. Testing with your change, DP, it seems to work dandy. Looking at the search code, it looks like I wrote DeferredInit() so that it could be called from multiple spots (such as when the browser is checking against a URL, or when something is specifically asking for search related information) and indeed it is. So, as your patch points out, DeferredInit() doesn't need to be specifically called at Init() time. r=rjc@rjcdb.com :) [Haven't typed THAT in a while]
Comment on attachment 50148 [details] [diff] [review] Deferring enumerating searchplugins directory on startup r=rjc
Attachment #50148 - Flags: review+
Yeah. I tested it too and it all worked. Thanks rjc.
Comment on attachment 50148 [details] [diff] [review] Deferring enumerating searchplugins directory on startup sr=alecf
Attachment #50148 - Flags: superreview+
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
mass-verifying claudius' Fixed bugs which haven't changed since 2001.12.31. if you think this particular bug is not fixed, please make sure of the following before reopening: a. retest with a *recent* trunk build. b. query bugzilla to see if there's an existing, open bug (new, reopened, assigned) that covers your issue. c. if this does need to be reopened, make sure there are specific steps to reproduce (unless already provided and up-to-date). thanks! [set your search string in mail to "AmbassadorKoshNaranek" to filter out these messages.]
Status: RESOLVED → VERIFIED
Product: Core → SeaMonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: