bug 100834 Deferring enumeration of search plugins directory until REALLY required. r=rjc@rjcdb.com, sr=alecf